Stop wrap for large grids

--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,7 @@ button {
   margin: 5px;
   font-weight: bold;
 }
+
+.grid {
+  white-space: nowrap;
+}
